# skillopt

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  gepa_skill_optimization.ipynb  main.py  optimize_skill.py  pyproject.toml
.claude/skills/skill-optimizer/: SKILL.md
docs/: skillopt-demo-deck.html
examples/: training_examples.json
examples/example_1/Bad_Kubernetes_Helper_Skill/: SKILL.md
examples/example_1/Bad_Kubernetes_Helper_Skill/references/: advanced-topics.md  troubleshooting-guide.md
examples/example_1/Bad_Kubernetes_Helper_Skill/references/networking/deep-dive/: details.md
examples/example_1/Bad_Kubernetes_Helper_Skill_GEPA_Optimized/: SKILL.md
examples/example_1/Bad_Kubernetes_Helper_Skill_GEPA_Optimized_2/: SKILL.md
examples/example_1/kubernetes-skill-workspace/: evals.json  evals_with_assertions.json
examples/example_2/dad-joke/: SKILL.md  evals_with_assertions.json
examples/example_2/dad-joke_GEPA_Eval_Optimized/: SKILL.md  benchmark.json
notebooks/: gepa_skill_optimization.ipynb  gepa_skill_optimization_with_evals.ipynb  skill_optimization.ipynb
scripts/: convert_benchmark.py  optimize_skill.py  optimize_skill_with_evals.py  run_variance_benchmark.py
skillopt/: __init__.py  prompt_parser.py  skill_analyzer.py  skill_parser.py  trajectory.py
skillopt/benchmarks/: __init__.py  searchqa.py  swe_bench.py  tau_bench.py
