[project]
name = "skillopt"
version = "0.3.0"
description = "SkillOpt - Optimize Claude Agent Skills using DSPy and best practices"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "SkillOpt Team" }
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "dspy-ai>=2.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skillopt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
